Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                         </div>
                         <div class="skill-item">
                             <i class="fas fa-rocket"></i>
-                            <span>Cursore</span>
+                            <span>Cursor</span>
                         </div>
                     </div>
                 </div>
@@ -543,7 +543,7 @@
                         <i class="fas fa-envelope"></i>
                         <div>
                             <h3>Email</h3>
-                            <p>tarunmahndirata@email.com</p>
+                            <p>tarunmahndirata@gmail.com</p>
                         </div>
                     </div>
                     <div class="contact-item">
@@ -600,3 +600,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
